Bug 502521 - Link to Global Theme from Quick Settings doesn't show Colors & Themes sub-menu
Summary: Link to Global Theme from Quick Settings doesn't show Colors & Themes sub-menu
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: Quick Settings (other bugs)
Version First Reported In: 6.3.4
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: usability
: 504892 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-04-07 12:44 UTC by John Veness
Modified: 2025-05-27 23:06 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.0
Sentry Crash Report:


Attachments
A demonstration of the issue (906.29 KB, video/webm)
2025-04-07 12:44 UTC, John Veness
Details

Note You need to log in before you can comment on or make changes to this bug.
Description John Veness 2025-04-07 12:44:00 UTC
Created attachment 180063 [details]
A demonstration of the issue

SUMMARY
If you navigate to Global Theme from the buttons within Quick Settings, the main body of the window shows the Global Theme settings, but doesn't show the Colors & Themes sub-menu. This is unlike other sections reachable from buttons within Quick Settings and reduces discoverability of additional settings.

STEPS TO REPRODUCE
1. Run System Settings
2. Maximise the window (maybe not necessary)
3. Click on Global Theme, either from "More appearance settings" or "Most used pages" if it appears there

OBSERVED RESULT
The left-hand column shows Colors & Themes selected. There is no middle column. The main area shows the Global Theme settings.

EXPECTED RESULT
The left-hand column shows Colors & Themes selected. A middle column shows the Colors & Themes submenu, such as Global Theme, Colors, Night Light and so on. The main area shows the Global Theme settings.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20250403
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.2
Kernel Version: 6.14.0-1-default (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
This isn't the case with other settings that you can get to from buttons within Quick Settings that have submenus, such as Mouse, Keyboard (if they appear in "Most used pages"). Not showing the Colors & Themes sub menu when directly accessing Global Themes means that the extra settings are less discoverable.
Comment 1 Nate Graham 2025-04-07 19:49:31 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2025-05-22 10:48:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/357
Comment 3 Marco Martin 2025-05-22 10:57:34 UTC
Git commit 7559901d2cfd5d1abc0eb781df739dc76ebb929b by Marco Martin.
Committed on 22/05/2025 at 10:49.
Pushed by mart into branch 'master'.

Fix accessing sub categories when global theme is clicked

When the global theme button from the landing page is clicked,
it opens,
but the global theme submenu on the sidebar doesn't
furthermore, even clicking again on it won't open it, but
it's necessary instead to click on a different item then
on the global theme again in order to access the subcategories

M  +4    -2    app/SidebarMode.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/7559901d2cfd5d1abc0eb781df739dc76ebb929b
Comment 4 Marco Martin 2025-05-22 13:04:30 UTC
Git commit d3e2a0fbd7b4afcc536ebeddae3f1b8e92e443e8 by Marco Martin.
Committed on 22/05/2025 at 13:04.
Pushed by mart into branch 'Plasma/6.4'.

Fix accessing sub categories when global theme is clicked

When the global theme button from the landing page is clicked,
it opens,
but the global theme submenu on the sidebar doesn't
furthermore, even clicking again on it won't open it, but
it's necessary instead to click on a different item then
on the global theme again in order to access the subcategories


(cherry picked from commit 7559901d2cfd5d1abc0eb781df739dc76ebb929b)

7559901d Fix accessing sub categories when global theme is clicked

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +4    -2    app/SidebarMode.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/d3e2a0fbd7b4afcc536ebeddae3f1b8e92e443e8
Comment 5 Nate Graham 2025-05-27 23:06:25 UTC
*** Bug 504892 has been marked as a duplicate of this bug. ***