Fix accessing sub categories when global theme is clicked

When the global theme button from the landing page is clicked,
it opens,
but the global theme submenu on the sidebar doesn't
furthermore, even clicking again on it won't open it, but
it's necessary instead to click on a different item then
on the global theme again in order to access the subcategories

BUG:502521